--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-management.endpoint.health.show-details=always
+management.endpoint.health.show-details=${MANAGEMENTE_ENDPOINT:always}
 
 # data source
 spring.datasource.driverClassName=org.h2.Driver
