--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,4 @@
 management.endpoint.health.show-details=${MANAGEMENTE_ENDPOINT:always}
+spring.profiles.active=${SPRING_PROFILE:dev}
 
-# data source
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:proposta
-spring.datasource.username=sa
-spring.datasource.password=
 
-# jpa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-# h2
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
