--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,35 +4,35 @@ networks:
     driver: bridge
 
 services:
-  spring-proposta:
-    container_name: propostas
-    environment:
-      SPRING_BD_HOST: mysql
-      SPRING_BANCO_NOME: propostas
-      SPRING_USER: root
-      SPRING_PASSWORD: root
-      CARTAO_RESOURCE_URL: cartao_resource
-      SOLICITAO_ANALISE: soliciatao_analise
-      SPRING_PROFILE: test
-    build:
-      dockerfile: Dockerfile
-      context: .
-    ports:
-      - "8080:8080"
-    networks:
-      test-network:
-    depends_on:
-      - mysql
-
-  mysql:
-    image: mysql
-    container_name: mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: root
-    ports:
-    - "3306:3306"
-    networks:
-      test-network:
+#  spring-proposta:
+#    container_name: propostas
+#    environment:
+#      SPRING_BD_HOST: mysql
+#      SPRING_BANCO_NOME: propostas
+#      SPRING_USER: root
+#      SPRING_PASSWORD: root
+#      CARTAO_RESOURCE_URL: cartao_resource
+#      SOLICITAO_ANALISE: soliciatao_analise
+#      SPRING_PROFILE: test
+#    build:
+#      dockerfile: Dockerfile
+#      context: .
+#    ports:
+#      - "8080:8080"
+#    networks:
+#      test-network:
+#    depends_on:
+#      - mysql
+#
+#  mysql:
+#    image: mysql
+#    container_name: mysql
+#    environment:
+#      MYSQL_ROOT_PASSWORD: root
+#    ports:
+#    - "3306:3306"
+#    networks:
+#      test-network:
 
   zookeeper:
     image: "confluentinc/cp-zookeeper:5.2.1"
