--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,35 +4,37 @@ networks:
     driver: bridge
 
 services:
-#  spring-proposta:
-#    container_name: propostas
-#    environment:
-#      SPRING_BD_HOST: mysql
-#      SPRING_BANCO_NOME: propostas
-#      SPRING_USER: root
-#      SPRING_PASSWORD: root
-#      CARTAO_RESOURCE_URL: cartao_resource
-#      SOLICITAO_ANALISE: soliciatao_analise
-#      SPRING_PROFILE: test
-#    build:
-#      dockerfile: Dockerfile
-#      context: .
-#    ports:
-#      - "8080:8080"
-#    networks:
-#      test-network:
-#    depends_on:
-#      - mysql
-#
-#  mysql:
-#    image: mysql
-#    container_name: mysql
-#    environment:
-#      MYSQL_ROOT_PASSWORD: root
-#    ports:
-#    - "3306:3306"
-#    networks:
-#      test-network:
+  spring-proposta:
+    container_name: propostas
+    environment:
+      SPRING_BD_HOST: mysql
+      SPRING_BANCO_NOME: propostas
+      SPRING_USER: root
+      SPRING_PASSWORD: root
+      CARTAO_RESOURCE_URL:  http://contas:8888
+      SOLICITACAO_ANALISE: http://analise:9999
+      SPRING_PROFILE: test
+      KEY_CLOAK_URL: keycloak:8080
+      SECURITY_LOG: TRACE
+
+    build: .
+    ports:
+      - "8080:8080"
+    networks:
+      test-network:
+    depends_on:
+      - mysql
+      - keycloak
+
+  mysql:
+    image: mysql
+    container_name: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+    ports:
+    - "3306:3306"
+    networks:
+      test-network:
 
   zookeeper:
     image: "confluentinc/cp-zookeeper:5.2.1"
@@ -40,6 +42,8 @@ services:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
       ZOOKEEPER_SYNC_LIMIT: 2
+    networks:
+      test-network:
 
   kafka:
     image: "confluentinc/cp-kafka:5.2.1"
@@ -54,6 +58,8 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "1"
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: "true"
+    networks:
+      test-network:
 
   postgres:
     image: 'postgres:alpine'
@@ -66,13 +72,18 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_DB: keycloak
       POSTGRES_HOST: postgres
+    networks:
+      test-network:
 
   keycloak:
+    container_name: keycloak
     image: jboss/keycloak
     ports:
       - 18443:8443
       - 18080:8080
       - 19990:9990
+    networks:
+      test-network:
     depends_on:
       # Just a delay to wait for postgres! This is not recommended!
       - grafana
@@ -85,6 +96,7 @@ services:
       - transacoes
       - postgres
     environment:
+
       DB_VENDOR: postgres
       DB_ADDR: postgres
       DB_PORT: 5432
@@ -93,28 +105,33 @@ services:
       DB_PASSWORD: password
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: Pa55w0rd
-      POSTGRES_PORT_5432_TCP_ADDR: 127.0.0.1
+      POSTGRES_PORT_5432_TCP_ADDR: 127.0.0.1.
+      KEYCLOAK_FRONTEND_URL: http://keycloak:8080/auth
 
   analise:
     image: 'zupacademy/analise-financeira'
-    container_name: soliciatao_analise
+    container_name: analise
     ports:
       - 9999:9999
     environment:
       SERVER_PORT: 9999
-      LOG_LEVEL: INFO
+      LOG_LEVEL: DEBUG
       URL_SISTEMA_CARTAO: http://contas:8888/api/cartoes
       JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+    networks:
+      test-network:
 
   contas:
     image: 'zupacademy/contas'
-    container_name: cartao_resource
+    container_name: contas
     ports:
       - 8888:8888
     environment:
       SERVER_PORT: 8888
-      LOG_LEVEL: INFO
+      LOG_LEVEL: DEBUG
       JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+    networks:
+      test-network:
 
   transacoes:
     image: 'zupacademy/transacoes'
@@ -127,6 +144,8 @@ services:
       LOG_LEVEL: INFO
       KAFKA_HOST: "kafka:29092"
       JAEGER_ENDPOINT: http://jaeger:14268/api/traces
+    networks:
+      test-network:
 
   jaeger:
     image: jaegertracing/all-in-one
@@ -141,12 +160,15 @@ services:
       - 9411:9411
     environment:
       COLLECTOR_ZIPKIN_HTTP_PORT: 9411
+    networks:
+      test-network:
 
   prometheus:
     image: prom/prometheus
     volumes:
       - prometheus-volume:/etc/prometheus/
-    network_mode: bridge
+    networks:
+      test-network:
     ports:
       - "9090:9090"
 
@@ -154,7 +176,8 @@ services:
     image: grafana/grafana
     volumes:
       - grafana-volume:/var/lib/grafana
-    network_mode: bridge
+    networks:
+      test-network:
     ports:
       - "3000:3000"
     depends_on:
@@ -168,6 +191,8 @@ services:
       VAULT_DEV_ROOT_TOKEN_ID: ee413645-dbe8-4848-afc6-6bb2768ada75
       VAULT_TOKEN: ee413645-dbe8-4848-afc6-6bb2768ada75
       VAULT_ADDR: http://127.0.0.1:8200
+    networks:
+      test-network:
 
 volumes:
   grafana-volume:
