--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 management.endpoint.health.show-details=${MANAGEMENTE_ENDPOINT:always}
 spring.profiles.active=${SPRING_PROFILE:dev}
+logging.level.org.springframework.security=${SECURITY_LOG:INFO}
+
+## spring security resource server configuration
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://${KEY_CLOAK_URL:localhost:18080}/auth/realms/propostas}
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://${KEY_CLOAK_URL:localhost:18080}/auth/realms/propostas/protocol/openid-connect/certs}
 
 
