--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
-management.endpoint.health.show-details=${MANAGEMENTE_ENDPOINT:always}
 spring.profiles.active=${SPRING_PROFILE:dev}
 logging.level.org.springframework.security=${SECURITY_LOG:INFO}
+
+management.endpoint.health.show-details=${MANAGEMENTE_ENDPOINT:always}
+management.endpoints.web.exposure.include=info,health,prometheus
+management.endpoints.prometheus.enabled=true
+
+management.metrics.tags.aplicacao=${NOME_DA_APLICACAO:serviço de proposta}
+management.metrics.tags.ambiente=${AMBIENTE:dev}
 
 ## spring security resource server configuration
 
