--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.profiles.active=${SPRING_PROFILE:dev}
 logging.level.org.springframework.security=${SECURITY_LOG:INFO}
 
+my.saltSecret = ${salt:e71c707b4191cbef}
+
 # Jaeger - Habilita ou não
 opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
 
@@ -23,5 +25,3 @@ opentracing.jaeger.probabilistic-sampler.sampling-rate=${JAEGER_SAMPLER:1}
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://${KEY_CLOAK_URL:localhost:18080}/auth/realms/propostas}
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http://${KEY_CLOAK_URL:localhost:18080}/auth/realms/propostas/protocol/openid-connect/certs}
-
-
